2.0.1) Add ProviderService